--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         </title>
     </head>
     <body>
-        Heippa!
-        <a href="harjoitus2.html">tästä ekaan harjoitukseen</a>    
+        Heippa! <a href="harjoitus2.html">tästä ekaan harjoitukseen</a>    
     </body>
 </html>
