--- a/harjoitus2.html
+++ b/harjoitus2.html
@@ -19,12 +19,12 @@
                 <p>Lorem ipsum jne.</p>
             </div>
 
-            <div class="alusta3">
+            <div class="alusta3" id="laatikko2">
                 <h1 class="originalOtsikko2">Hei maailma!!</h1>
                 <p>Lorem ipsum jne</p>
             </div>
 
-            <div class="kategoriat">
+            <div class="kategoriat" id="laatikko3">
                 <h2 class="originalOtsikko3">Kategoriat</h2>
                 <ul>
                     <li><a href="">kategoria 1</a></li>
