--- a/harjoitus2.html
+++ b/harjoitus2.html
@@ -12,6 +12,7 @@
         <button type="button" onclick="laatikkoFunktio(1)" class="muutosNappi">Muuta 1. laatikon sisältöä.</button>
         <button type="button" onclick="laatikkoFunktio(2)" class="muutosNappi">Muuta 2. laatikon sisältöä.</button>
         <button type="button" onclick="laatikkoFunktio(3)" class="muutosNappi">Muuta 3. laatikon sisältöä.</button>
+        <button type="button" onClick="window.location.reload()" class="resetti">Resetoi sivun!</button>
         <img src="smiley1.png" height="100px" width="100px">
         <div class="alusta1">
             <div class="alusta2" id="laatikko1">
